# stella

./: .bazelrc  .bazelrc.b  WORKSPACE  main.md
build_script/: BUILD.bazel  README.md  build.py  install_stella.sh
stella/: BUILD  test.cc  workspace.bzl
stella/tests/: BUILD
stella/tests/examples/: test.cpp
stella/tests/llvm-compile/: llvm-compile.cpp
stella/tests/llvm-ir/: ._Z10first_funcic.dot  .main.dot  entry.cc  entry.ll  example.bc  llvmir_print.cc
stella/tests/llvm-stress/: llvm-stress.cpp
stella/utils/: BUILD  Driver.cpp  Version.cpp  Version.h
